flux/workloads/tenant-b/client.tenant-c.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-tenant-c
  labels:
    app: client-tenant-c
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-tenant-c
  template:
    metadata:
      name: client-tenant-c
      labels:
        app: client-tenant-c
    spec:
      containers:
        - name: client
          image: client:latest
          imagePullPolicy: Never
          resources: {}
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /readiness
              port: http
            initialDelaySeconds: 3
            periodSeconds: 3
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /liveness
              port: http
            initialDelaySeconds: 3
            periodSeconds: 3
            timeoutSeconds: 3
      restartPolicy: Always
